// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MapDetailMeetbout rendering should render everything 1`] = `
<section
  className="map-detail-result"
>
  <header
    className="
        map-detail-result__header
        map-detail-result__header--pano
      "
  >
    <img
      alt="Panoramabeeld"
      className="map-detail-result__header-pano"
      src="panoUrl"
    />
    <div
      className="map-detail-result__header-container"
    >
      <h1
        className="map-detail-result__header-title"
      >
        Meetbout
      </h1>
      <h2
        className="map-detail-result__header-subtitle"
      >
        Meetbout label
      </h2>
    </div>
  </header>
  <ul
    className="map-detail-result__list"
  >
    <MapDetailResultItem
      label="Status"
      value="Meetbout status"
    />
    <MapDetailResultItem
      label="Adres"
      value="Meetbout address"
    />
  </ul>
</section>
`;

exports[`MapDetailMeetbout rendering should render without pano url 1`] = `
<section
  className="map-detail-result"
>
  <header
    className="
        map-detail-result__header
        map-detail-result__header--no-pano
      "
  >
    <div
      className="map-detail-result__header-container"
    >
      <h1
        className="map-detail-result__header-title"
      >
        Meetbout
      </h1>
      <h2
        className="map-detail-result__header-subtitle"
      >
        Meetbout label
      </h2>
    </div>
  </header>
  <ul
    className="map-detail-result__list"
  >
    <MapDetailResultItem
      label="Status"
      value="Meetbout status"
    />
    <MapDetailResultItem
      label="Adres"
      value="Meetbout address"
    />
  </ul>
</section>
`;
